--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: egor-tensin/setup-mingw@v2
+      - uses: Joshua-Ashton/arch-mingw-github-action@v8
       - name: Build
         run: cargo build --release --target x86_64-pc-windows-gnu
       - name: Upload binaries to release
