--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: Joshua-Ashton/arch-mingw-github-action@v8
+      - name: Rustup add windows target
+        run: rustup target add x86_64-pc-windows-gnu
       - name: Build
         run: cargo build --release --target x86_64-pc-windows-gnu
       - name: Upload binaries to release
