--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: Joshua-Ashton/arch-mingw-github-action@v8
+      - name: Install mingW
+        run: |
+          sudo apt-get update
+          sudo apt-get install gcc-mingw-w64
       - name: Rustup add windows target
         run: rustup target add x86_64-pc-windows-gnu
       - name: Build
